k8s/static/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: static
spec:
  basicAuth:
    secret: static
